--- a/template/admin/manager.html
+++ b/template/admin/manager.html
@@ -22,6 +22,10 @@
       .updateCourse {
         display: none;
       }
+
+      .program {
+        display: block;
+      }
     </style>
   </head>
   <body>
