--- a/template/students/student-dashboard.html
+++ b/template/students/student-dashboard.html
@@ -22,6 +22,7 @@
       <div class="menu-icon">
         <i class="ri-menu-2-fill"></i>
       </div>
+      <span id="log-out-btn">Logout</span>
     </nav>
     <main>
       <div class="student-info">
