--- a/template/students/graduationRegistration.html
+++ b/template/students/graduationRegistration.html
@@ -28,9 +28,10 @@
       <section class="verification active">
         <div class="container">
           <h3>
-            Dear Student, please enter your student's index number below to
-            verify if you do not have any outstanding debt before you proceed
-            with your graduation registration.
+            Dear Student,
+          Kindly enter your student index number below to verify your financial status and confirm that there are no outstanding debts prior to proceeding with your graduation registration.
+          <br />
+          Thank you.
           </h3>
           <input
             type="text"
