Enhance admin account management and graduation registration features
- Updated CSS for admin account and graduation pages to improve styling and layout.
- Added JavaScript functionality for handling logout and fetching staff information.
- Modified HTML templates for account management and graduation registration to include dynamic data rendering.
- Implemented validation for index number input during graduation registration.
- Improved navigation links in admin account page for better user experience.

--- a/staticfiles/css/admin/account.css
+++ b/staticfiles/css/admin/account.css
@@ -70,6 +70,11 @@ nav .links ul:first-child li:first-child {
   border-bottom: none;
 }
 
+nav .links ul li a {
+  text-decoration: none;
+  color: var(--primarycolor);
+}
+
 main {
   flex: 5;
   display: flex;
