--- a/frontend/css/admin/account_graduation.css
+++ b/frontend/css/admin/account_graduation.css
@@ -7,8 +7,7 @@ body {
 }
 
 nav,
-main,
-aside {
+main {
   background-color: white;
   height: 95vh;
   width: fit-content;
@@ -70,11 +69,6 @@ nav .links ul:first-child li:first-child {
   border-bottom: none;
 }
 
-nav .links ul li a {
-  text-decoration: none;
-  color: var(--primarycolor);
-}
-
 main {
   flex: 5;
   display: flex;
@@ -102,81 +96,66 @@ main .head {
   width: 100%;
   display: flex;
   align-items: center;
+  justify-content: space-between;
+  padding: 0 1.5rem;
+  margin: 0.2rem;
+}
+
+main .head #std-name {
+  padding: 0.5rem;
+  width: 30%;
+  border: none;
+  border-bottom: 2px solid var(--primarycolor);
+  outline: none;
+  font-size: large;
+}
+
+main .course-table {
+  width: 100%;
+  height: 85%;
+  overflow-y: scroll;
+  padding: 10px;
+  display: flex;
+  align-items: flex-start;
   justify-content: center;
 }
 
-main .slider {
-  border: 1px solid var(--primarycolor);
-  border-radius: 10px;
-  width: 90%;
-  padding: 8px;
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
+main .course-table::-webkit-scrollbar {
+  display: none;
 }
 
-main .slider p {
-  font-weight: 600;
-  padding: 10px;
-  width: 15%;
-  text-align: center;
-  border-radius: 5px;
-}
-
-main .slider p.selected {
-  background-color: var(--primarycolor);
-  color: white;
-}
-
-main .student-container {
-  width: 95%;
-  height: 75%;
-  max-height: 75%;
-  overflow-y: scroll;
-  padding: 5px;
-  margin-top: 1rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-  gap: 15px;
-}
-
-main .student-container .card {
+main .course-table table {
   width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  border-radius: 5px;
-  padding: 10px;
-  color: var(--primarytextcolor);
-  border: 1px solid var(--primarycolor);
+  text-align: center;
+  border-spacing: 0;
+  border-color: transparent;
 }
 
-main .student-container .card:hover {
-  box-shadow: 0px 15px 30px var(--boxshadow-color);
-  -webkit-box-shadow: -0px 15px 30px var(--boxshadow-color);
-  -moz-box-shadow: -0px 15px 30px var(--boxshadow-color);
-}
-
-main .student-container .card p:nth-child(odd) {
-  flex: 1;
-}
-
-main .student-container .card p:nth-child(even) {
-  flex: 5;
-}
-
-main .student-container .card input {
-  padding: 10px;
-  border: none;
+main .course-table table thead tr th {
+  font-weight: bold;
   background-color: var(--primarycolor);
   color: white;
-  border-radius: 5px;
 }
 
-main .student-container .card input:hover {
-  background-color: #0d0850e0;
+main .course-table table thead tr th,
+main .course-table table tbody tr td {
+  /* border-right: 1px solid var(--primarycolor); */
+  padding: 15px;
+  height: fit-content;
+}
+
+main .course-table table thead tr th:last-child,
+main .course-table table tbody tr td:last-child {
+  border-right: none;
+}
+
+main .course-table table tbody tr td:first-child {
+  white-space: nowrap;
+}
+
+main .course-table table tbody tr:nth-child(even) {
+  background-color: var(--primarycolor);
+  color: white;
 }
 
 main .student-container.debt,
@@ -194,7 +173,7 @@ main .action {
   padding: 5px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
 }
 
 main .action input {
@@ -202,42 +181,6 @@ main .action input {
   border: none;
   border-radius: 5px;
   font-size: 18px;
-  color: white;
-  background-color: var(--primarycolor);
-}
-
-aside {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-  padding: 10px;
-  gap: 1%;
-}
-
-aside input {
-  border-radius: 5px;
-  border: 1px solid var(--primarycolor);
-  color: var(--primarycolor);
-  background-color: white;
-}
-
-aside input[type="text"] {
-  padding: 10px;
-  outline: none;
-}
-
-aside input[type="text"]::placeholder {
-  font-style: italic;
-}
-
-aside input[type="button"] {
-  width: 70%;
-  padding: 5px;
-}
-
-aside input[type="button"].active {
   color: white;
   background-color: var(--primarycolor);
 }
