--- a/template/admin/account_graduation.html
+++ b/template/admin/account_graduation.html
@@ -33,7 +33,7 @@
       </div>
       <div class="links">
         <ul>
-          <li><a href="{% url 'account-office' %}">Clear Students</a></li>
+          <!-- <li><a href="{% url 'account-office' %}">Clear Students</a></li> -->
           <li>
             <a href="{% url 'account-office-graduants' %}"
               >Registered Graduants</a
