--- a/template/students/graduationRegistration.html
+++ b/template/students/graduationRegistration.html
@@ -22,16 +22,18 @@
     <head>
       <nav>
         <h3>PCE Graduation Registration</h3>
+        <a href="{% url 'login-page' %}">Log In</a>
       </nav>
     </head>
     <main>
       <section class="verification active">
         <div class="container">
           <h3>
-            Dear Student,
-          Kindly enter your student index number below to verify your financial status and confirm that there are no outstanding debts prior to proceeding with your graduation registration.
-          <br />
-          Thank you.
+            Dear Student, Kindly enter your student index number below to verify
+            your financial status and confirm that there are no outstanding
+            debts prior to proceeding with your graduation registration.
+            <br />
+            Thank you.
           </h3>
           <input
             type="text"
