Content update in account graduation link

--- a/template/admin/account_graduation.html
+++ b/template/admin/account_graduation.html
@@ -36,7 +36,7 @@
           <!-- <li><a href="{% url 'account-office' %}">Clear Students</a></li> -->
           <li>
             <a href="{% url 'account-office-graduants' %}"
-              >Registered Graduates</a
+              >Registered Students</a
             >
           </li>
         </ul>
