Add GraduationList model and implement Excel data generation feature
- Created GraduationList model with xlsName and xlsFile fields.
- Added generateExcelData view to export graduation data to Excel.
- Updated URLs to include path for generating Excel data.
- Enhanced admin interface to allow downloading of generated Excel files.

--- a/template/admin/account_graduation.html
+++ b/template/admin/account_graduation.html
@@ -54,6 +54,7 @@
             name="std-name"
             id="std-name"
             placeholder="Search by name"
+            hidden
           />
         </div>
         <div class="course-table">
@@ -82,7 +83,8 @@
         </div>
         <div class="action">
           <p id="students-count">Total number of registered students: {{tc}}</p>
-          <input type="button" value="Print List" />
+          <input type="button" value="Convert Data To Excel" id="print-data" />
+          <a href="" id="file-url" hidden download=""></a>
         </div>
       </div>
       <div class="w-dept-container">
